Ensure on the options section (middle nav bar) that rounded borders dont get applied to these elements as it makes the border non flat and out of place

--- a/assets/styles/layout/_options.scss
+++ b/assets/styles/layout/_options.scss
@@ -29,6 +29,10 @@
   
   }
 
+  button{
+    border-radius: 0%!important;
+  }
+
   &--top {
     border-top: 0;
   }
